# python-poetry-cli-template

./: .actrc  .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: .gitmessage
.github/hooks/: commit-msg  pre-commit  pre-push
.github/templates/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  delivery.yml  integration.yml  pre-merge.yml
src/package_name/: cli.py
tests/: conftest.py
tests/ci/fixtures/: pull_request_merged.json
tests/e2e/: test_cli.py
tests/integration/: test_cli.py
tests/integration/package_name/: test_cli.py
tests/unit/package_name/: test_cli.py
