[tool.poetry]
name = "package-name"
version = "1.1.0"
description = "Package description"
license = "MIT"
authors = ["Author Name <author.email@example.com>"]
readme = "README.md"
packages = [
  { include = "package_name", "from" = "src" }
]

repository = "https://github.com/github-user/package-name"
keywords = ["Package Name"]
classifiers = [
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.5"

[tool.black]
line-length = 100

[tool.pylint.main]
score = "n"
no-docstring-rgx = "^_|^test_"

[tool.pylint."messages control"]
disable = ["missing-module-docstring"]

[tool.pytest.ini_options]
minversion = "7.4.0"
pythonpath = "src"
testpaths = ["tests/unit", "tests/integration"]
addopts = "-vv --import-mode=importlib"

[tool.poetry.scripts]
package-name = "package_name.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"